# gridwise

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/gridwise/: cli.py  store.py
src/gridwise/core/: model.py  utils.py
src/gridwise/encode/: __init__.py  best.py  chunking.py  post.py  vanilla.py
src/gridwise/encode/compressor/: __init__.py  aggregate.py  anchors.py  dict_rebuild.py  invert_index.py
src/gridwise/eval/: metrics.py  tokens.py
src/gridwise/io/: __init__.py  loaders.py  xlsx_loader.py
src/gridwise/streaming/: csv_stream.py
